# jijin_gazebo_tutorial

./: intall_ubuntu16_basic.txt  jijin_tutorial_document.pptx
jijin_manipulator_control/: CMakeLists.txt  package.xml
jijin_manipulator_control/launch/: control_3dof.launch  control_6dof.launch
jijin_manipulator_control/src/: read_jointstate_publish_cmd_gazebo_3dof.cpp  read_jointstate_publish_cmd_gazebo_6dof.cpp
jijin_manipulator_description/: CMakeLists.txt  package.xml
jijin_manipulator_description/launch/: show_jijin_manipulator_3dof_description.launch  show_jijin_manipulator_3dof_gazebo.launch  show_jijin_manipulator_6dof_description.launch  show_jijin_manipulator_6dof_gazebo.launch
jijin_manipulator_description/rviz/: show_description.rviz
jijin_manipulator_description/urdf/: jijin_gripper.xacro  jijin_manipulator_6dof.urdf  jijin_manipulator_6dof.urdf.xacro  jijin_manipulator_6dof_cortorl.yaml  manipulator.urdf  manipulator.urdf.xacro  manipulator_control.yaml
jijin_manipulator_description/world/: empty.world
jijin_mobile_robot_description/: CMakeLists.txt  package.xml
jijin_mobile_robot_description/launch/: show_robot_describtion.launch  show_robot_gazebo.launch
jijin_mobile_robot_description/urdf/: jijin_wheel_robot.urdf  jijin_wheel_robot.urdf.xacro  wheel_control.yaml
jijin_mobile_robot_description/world/: jijin_wheel_robot.world
jijin_navigation_tutorial/: CMakeLists.txt  package.xml
jijin_navigation_tutorial/launch/: navigation_gazebo.launch
jijin_navigation_tutorial/params/planner_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
jijin_navigation_tutorial/params/planner_params/Planner_Setting/: costmap_common_params_file.txt
jijin_navigation_tutorial/params/planner_params/Planner_Setting/Husky_Robot_config_example/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
jijin_navigation_tutorial/params/planner_params/Planner_Setting/Local_Planner/Base_Local_Planner/: base_local_planner_configure_setting.txt  base_local_planner_launch_example.launch  base_local_planner_params.yaml
jijin_navigation_tutorial/params/planner_params/Planner_Setting/Local_Planner/Teb_Local_Planner/: teb_local_palnner_configure_setting.txt  teb_local_planner_launch_excample.launch  teb_local_planner_params.yaml
